--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: public 
+          publish_dir: . 
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
