--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,4 @@ jobs:
           npm run build          
         
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          publish_dir: . 
-          publish_branch: gh-pages
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: GIT_PASS=${{ secrets.GITHUB_TOKEN }} GIT_USER=testpress npm run deploy
